@@ -109,12 +109,6 @@ from bzrlib.osutils import (
     sha_strings,
     split_lines,
     )
-from bzrlib.symbol_versioning import (
-    DEPRECATED_PARAMETER,
-    deprecated_method,
-    deprecated_passed,
-    one_four,
-    )
 from bzrlib.tsort import topo_sort
 from bzrlib.tuned_gzip import GzipFile, bytes_to_gzip
 import bzrlib.ui
@@ -947,30 +941,11 @@ class KnitVersionedFile(VersionedFile):
             annotated_part = "plain"
         return "knit-%s" % (annotated_part,)
         
-    @deprecated_method(one_four)
-    def get_graph_with_ghosts(self):
-        """See VersionedFile.get_graph_with_ghosts()."""
-        return self.get_parent_map(self.versions())
-
     def get_sha1s(self, version_ids):
         """See VersionedFile.get_sha1s()."""
         record_map = self._get_record_map(version_ids)
         # record entry 2 is the 'digest'.
         return [record_map[v][2] for v in version_ids]
-
-    @deprecated_method(one_four)
-    def has_ghost(self, version_id):
-        """True if there is a ghost reference in the file to version_id."""
-        # maybe we have it
-        if self.has_version(version_id):
-            return False
-        # optimisable if needed by memoising the _ghosts set.
-        items = self.get_parent_map(self.versions())
-        for parents in items.itervalues():
-            for parent in parents:
-                if parent == version_id and parent not in items:
-                    return True
-        return False
 
     def insert_data_stream(self, (format, data_list, reader_callable)):
         """Insert knit records from a data stream into this knit.
